Bug 781014: Make sure the toplevel gonk widget doesn't resize smaller than screen on exiting fullscreen. r=cpearce,mwu